# VeeCall

./: .gitignore  Procfile  README.md  config.json  deploy.sh  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  start.sh  videocalling.py
static/: index.html  script.js  style.css
