[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veecall"
version = "2.0.0"
description = "Professional FastAPI Video Calling Application"
dependencies = [
    "fastapi==0.115.13",
    "uvicorn[standard]==0.34.3",
    "websockets==12.0",
    "python-multipart==0.0.18",
    "pydantic==2.11.7",
    "starlette==0.46.2"
]

[project.scripts]
start = "uvicorn videocalling:app"
